# opencvsrc

./: CMakeLists.txt.template  README.md  gitignore.template  make_dev_dir.sh  template.cc
ch10ex1/: .gitignore  CMakeLists.txt  ch10ex1.cc
ch10ex10/: .gitignore  CMakeLists.txt  ch10ex10.cc
ch10ex11/: .gitignore  CMakeLists.txt  ch10ex11.cc
ch10ex12/: .gitignore  CMakeLists.txt  ch10ex12.cc
ch10ex13/: .gitignore  CMakeLists.txt  ch10ex13.cc
ch10ex2/: .gitignore  CMakeLists.txt  ch10ex2.cc
ch10ex4/: .gitignore  CMakeLists.txt  ch10ex4.cc  runtest.sh
ch10ex5/: .gitignore  CMakeLists.txt  ch10ex5.cc  runtest.sh
ch10ex6/: .gitignore  CMakeLists.txt  ch10ex6.cc  runtest.sh
ch10ex7/: .gitignore  CMakeLists.txt  ch10ex7.cc  runtest.sh
ch10ex8/: .gitignore  CMakeLists.txt  ch10ex8.cc  foo.txt  runtest.sh
ch1ex3/: .gitignore  CMakeLists.txt  ch1ex3  ch1ex3.cc
ch1ex4/: .gitignore  CMakeLists.txt  ch1ex4.cc
ch3ex1/: .gitignore  CMakeLists.txt  ch3ex1.cc
ch3ex2/: .gitignore  CMakeLists.txt  ch3ex2.cc
ch3ex3/: .gitignore  CMakeLists.txt  ch3ex3.cc
ch4ex1/: .gitignore  CMakeLists.txt  ch4ex1.cc
ch4ex1c/: .gitignore  CMakeLists.txt  ch4ex1c.cc  colorPatch.cc  colorPatch.hpp
ch4ex2/: .gitignore  CMakeLists.txt  ch4ex2.cc  foo.txt
ch5ex1/: .gitignore  CMakeLists.txt  ch5ex1.cc
ch5ex2/: .gitignore  CMakeLists.txt  ch5ex2.cc
ch5ex4/: .gitignore  CMakeLists.txt  ch5ex4.cc  foo.txt  too.txt
ch5ex5/: .gitignore  CMakeLists.txt  ch5ex5.cc
ch5ex6/: .gitignore  CMakeLists.txt  ch5ex6.cc
ch6ex1/: .gitignore  CMakeLists.txt  ch6ex1.cc
ch6ex3/: ch6ex3  (+3 more)
(+117 files in other folders)
